Fixes the black screen.

--- a/RenderLimits/RenderLimits.csproj
+++ b/RenderLimits/RenderLimits.csproj
@@ -4,8 +4,16 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <DoILRepack>false</DoILRepack>
   </PropertyGroup>
-  <Target Name="CopyDLL" AfterTargets="Build">
+  <Target Name="ILRepacker" AfterTargets="Build" >
+      <ItemGroup>
+          <InputAssemblies Include="$(TargetPath)" />
+          <InputAssemblies Include="$(ProjectDir)..\..\Libs\ServerSync.dll" />
+      </ItemGroup>
+      <ILRepack Parallel="true" Internalize="true" InputAssemblies="@(InputAssemblies)" TargetKind="Dll" OutputFile="$(TargetPath)" />
+  </Target>
+  <Target Name="CopyDLL" AfterTargets="ILRepacker">
     <Copy
       SourceFiles="$(TargetDir)$(ProjectName).dll"
       DestinationFolder="$(ProjectDir)\..\..\Libs" />
@@ -42,5 +50,11 @@
     <Reference Include="assembly_utils_publicized.dll">
       <HintPath>..\..\Libs\assembly_utils_publicized.dll</HintPath>
     </Reference>
+    <Reference Include="ServerSync.dll">
+      <HintPath>..\..\Libs\ServerSync.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ILRepack.Lib.MSBuild" Version="2.1.18" />
   </ItemGroup>
 </Project>
