Fixed for the new game version.

--- a/RenderLimits/RenderLimits.csproj
+++ b/RenderLimits/RenderLimits.csproj
@@ -4,15 +4,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <DoILRepack>false</DoILRepack>
   </PropertyGroup>
-  <Target Name="ILRepacker" AfterTargets="Build" >
-      <ItemGroup>
-          <InputAssemblies Include="$(TargetPath)" />
-          <InputAssemblies Include="$(ProjectDir)..\..\Libs\ServerSync.dll" />
-      </ItemGroup>
-      <ILRepack Parallel="true" Internalize="true" InputAssemblies="@(InputAssemblies)" TargetKind="Dll" OutputFile="$(TargetPath)" />
-  </Target>
   <Target Name="CopyDLL" AfterTargets="ILRepacker">
     <Copy
       SourceFiles="$(TargetDir)$(ProjectName).dll"
@@ -55,6 +47,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="ILRepack.Lib.MSBuild" Version="2.1.18" />
+    <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.34.1" />
   </ItemGroup>
 </Project>
