--- a/RenderLimits/RenderLimits.csproj
+++ b/RenderLimits/RenderLimits.csproj
@@ -36,11 +36,11 @@
     <Reference Include="BepInEx.Harmony.dll">
       <HintPath>..\..\Libs\BepInEx.Harmony.dll</HintPath>
     </Reference>
-    <Reference Include="assembly_valheim_publicized.dll">
-      <HintPath>..\..\Libs\assembly_valheim_publicized.dll</HintPath>
+    <Reference Include="assembly_valheim.dll">
+      <HintPath>..\..\Libs\assembly_valheim.dll</HintPath>
     </Reference>
-    <Reference Include="assembly_utils_publicized.dll">
-      <HintPath>..\..\Libs\assembly_utils_publicized.dll</HintPath>
+    <Reference Include="assembly_utils.dll">
+      <HintPath>..\..\Libs\assembly_utils.dll</HintPath>
     </Reference>
     <Reference Include="ServerSync.dll">
       <HintPath>..\..\Libs\ServerSync.dll</HintPath>
